--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Malaysia Petrol Price - Latest</title>
+    <meta name="title" content="Malaysia Petrol Price - Latest" />
+    <meta
+      name="description"
+      content="Check out and keep track of latest petrol, diesel and other fuel prices in Malaysia."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://petrol.krsn.xyz/" />
+    <meta property="og:title" content="Malaysia Petrol Price - Latest" />
+    <meta
+      property="og:description"
+      content="Check out and keep track of latest petrol, diesel and other fuel prices in Malaysia."
+    />
+    <meta
+      property="og:image"
+      content="https://media1.thehungryjpeg.com/thumbs/800_3487793_970b4098ef2d07dc43667237edebdc2f13c2fe08.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://petrol.krsn.xyz/" />
+    <meta property="twitter:title" content="Malaysia Petrol Price - Latest" />
+    <meta
+      property="twitter:description"
+      content="Check out and keep track of latest petrol, diesel and other fuel prices in Malaysia."
+    />
+    <meta
+      property="twitter:image"
+      content="https://media1.thehungryjpeg.com/thumbs/800_3487793_970b4098ef2d07dc43667237edebdc2f13c2fe08.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
